# hab-plans

./: .gitignore  README.md
couchbase/: README.md  default.toml  notes.md  plan.sh
couchbase/config/: default.d-capi.ini  default.ini  static_config
couchbase/hooks/: init  run
cuda/: README.md  cuda-findgllib_mk.diff  plan.sh
cuda-cmake-example/: CMakeLists.txt  plan.sh
cuda-cmake-example/src.gpu/: CmakeLists.txt  main.cu
cuda-libs/: plan.sh
cuda-samples/: plan.sh
flatbuffers/: plan.sh
gcc7/: README.md  plan.sh
gcc7-libs/: README.md  plan.sh
glib/: plan.sh
jenkins/: default.toml  fix_node.patch  plan.sh
jenkins/config/: config.xml
jenkins/hooks/: init  run
jetty/: default.toml  plan.sh
jetty/config/: start.ini
jetty/hooks/: init  run
tomcat/: README.md  default.toml  plan.sh
tomcat/config/: server.xml
tomcat/hooks/: run
v8/: README.md  plan.sh
